testsuite/tests/dependent/should_fail/TypeSkolEscape.hs
module TypeSkolEscape where

import GHC.Exts

type Bad = forall (v :: Levity) (a :: TYPE v). a
